# tren

./: .gitignore  Cargo.toml  README.md  asd.csv
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/tests/: cli.csv  don_t_be_greedy.csv  don_t_dispute_skipped_transactions.csv  malformed.csv  multiple_clients.csv  one_client_basic_lifecycle.csv  one_transaction_per_type.csv  refer_inexistent_tx.csv  simple_disputed_chargeback.csv  simple_disputed_resolve.csv
src/tren/: account.rs  client.rs  engine.rs  mod.rs  transactions.rs
src/tren/engine/: context.rs  runner.rs
src/tren/handlers/: collect_handler.rs  execute_handler.rs  mod.rs  print_handler.rs  transaction_handler.rs
src/tren/inputs/: csv_streamer.rs  mod.rs  transactions_provider.rs
src/tren/output/: csv_printer.rs  mod.rs
src/tren/storage/: in_memory_accounts_storage.rs  mod.rs  store.rs
tests/: cli_test.rs
