[package]
name = "tren"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.29", features = ["cargo"] }
clippy = "0.0.302"
csv = "1.3.1"
csv-async = "1.3.0"
futures-util = "0.3.31"
rand = "0.9.0"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = [
    "fs",
    "io-util",
    "rt",
    "macros",
    "rt-multi-thread",
] }
tokio-util = { version = "0.7.13", features = ["compat"] }
# tokio-stream = { version = "0.1.17", features = ["tokio-util"] }
